--- a/vote/views/index.njk
+++ b/vote/views/index.njk
@@ -18,7 +18,7 @@
     </div>
     {% endif %}
     
-    <div class="title">Voting App</div>
+    <div class="title">Voting App2</div>
 
     <div class="box hidden">
         <button class="far fa-thumbs-up" id="up"><span>0</span></button>
