--- a/vote/views/index.njk
+++ b/vote/views/index.njk
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/css/font-awesome/all.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
-    <title>Vote</title>
+    <title>Vote1</title>
 </head>
 
 <body>
