--- a/vote/public/css/main.css
+++ b/vote/public/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: red;
+    background-color: rgb(211, 195, 195);
     font-size: 1em;
     overflow: hidden;
 }
